--- a/package.json
+++ b/package.json
@@ -19,17 +19,7 @@
     "test:fengshui": "node test/test-fengshui-analyzer.js",
     "test:history": "node test/test-history-analyzer.js",
     "dev": "nodemon index.js",
-    "build": "node scripts/build.js",
-    "build:fast": "node scripts/build.js --skip-tests --skip-lint",
-    "deploy": "npm run build && node scripts/deploy.js",
-    "cli": "node bin/chinese-naming-cli.js",
-    "setup": "node scripts/start.js init",
-    "lint": "eslint . --ext .js --fix",
-    "format": "prettier --write .",
-    "docs": "jsdoc -c jsdoc.config.json",
     "clean": "rimraf build dist .temp logs coverage",
-    "prestart": "npm run setup",
-    "postinstall": "npm run setup",
     "coverage": "nyc npm test"
   },
   "keywords": [
@@ -50,30 +40,17 @@
   "author": "Chinese Naming MCP Team",
   "license": "MIT",
   "dependencies": {
-    "@mapbox/node-pre-gyp": "^2.0.0",
-    "chalk": "^4.1.2",
-    "commander": "^9.4.1",
-    "inquirer": "^8.2.5",
     "jieba": "^1.0.0",
     "jieba-js": "^1.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pinyin": "^3.1.0",
-    "pinyin-pro": "^3.26.0",
-    "winston": "^3.8.2"
+    "pinyin-pro": "^3.26.0"
   },
   "devDependencies": {
-    "archiver": "^6.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.0.0",
-    "jsdoc": "^4.0.0",
     "nodemon": "^3.0.0",
     "nyc": "^15.1.0",
-    "prettier": "^3.0.0",
     "rimraf": "^5.0.0"
   },
   "engines": {
@@ -82,26 +59,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-org/chinese-naming-mcp-toolset.git"
+    "url": "https://github.com/SiwuXue/chinese-naming-mcp-toolset.git"
   },
   "bugs": {
-    "url": "https://github.com/your-org/chinese-naming-mcp-toolset/issues"
+    "url": "https://github.com/SiwuXue/chinese-naming-mcp-toolset/issues"
   },
-  "homepage": "https://github.com/your-org/chinese-naming-mcp-toolset#readme",
+  "homepage": "https://github.com/SiwuXue/chinese-naming-mcp-toolset#readme",
   "files": [
     "index.js",
-    "tools/",
+    "src/",
     "config/",
-    "bin/",
     "examples/",
     "README.md",
-    "API.md",
     "LICENSE"
   ],
-  "bin": {
-    "chinese-naming": "./bin/chinese-naming-cli.js"
-  },
-  "preferGlobal": true,
+
+
   "config": {
     "logLevel": "info",
     "outputFormat": "json",
