feat: 添加 CLI 支持，支持 npx 调用\n\n- 添加 bin/cli.js 命令行入口文件\n- 在 package.json 中配置 bin 字段\n- 提供使用说明和配置示例\n- 支持 --help, --version, --config, --test 参数\n- 版本升级到 1.1.0

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "chinese-naming-mcp-toolset",
+  "name": "chinese-naming-mcp",
   "version": "1.0.0",
   "description": "A comprehensive MCP toolset for Chinese name generation, analysis, and cultural interpretation",
   "main": "index.js",
+  "bin": {
+    "chinese-naming-mcp": "./bin/cli.js"
+  },
   "scripts": {
     "start": "node index.js",
     "test": "jest",
@@ -68,6 +71,7 @@
   "files": [
     "index.js",
     "src/",
+    "bin/",
     "config/",
     "examples/",
     "README.md",
