feat: 移除 CLI 功能，npx 直接运行 MCP 服务\n\n- 将 bin 字段指向 index.js 主入口文件\n- 删除 bin/cli.js 和 bin 目录\n- 更新 package.json files 字段\n- 版本升级到 1.2.0\n- 现在 npx chinese-naming-mcp 直接启动 MCP 服务

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "chinese-naming-mcp",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "A comprehensive MCP toolset for Chinese name generation, analysis, and cultural interpretation",
   "main": "index.js",
   "bin": {
-    "chinese-naming-mcp": "./bin/cli.js"
+    "chinese-naming-mcp": "./index.js"
   },
   "scripts": {
     "start": "node index.js",
@@ -71,7 +71,6 @@
   "files": [
     "index.js",
     "src/",
-    "bin/",
     "config/",
     "examples/",
     "README.md",
